--- a/README
+++ b/README
@@ -11,7 +11,8 @@ set -e
 #
 #Then set (assuming you are in $HOME):
 export GOPATH=$HOME/u-root
-PATH=$GOPATH/bin:$GOPATH/buildbin:$PATH
+export GOROOT=$HOME/u-root/go
+PATH=$GOPATH/bin:$GOPATH/buildbin:$GOPATH/go/bin:$PATH
 #
 (GOBIN=`pwd`/buildbin go install installcommand)
 #
