Trying to get it to go standalone
Signed-off-by: Ronald G. Minnich <rminnich@google.com>

--- a/README
+++ b/README
@@ -10,17 +10,38 @@ set -e
 #You can test with chroot.
 #
 #Then set (assuming you are in $HOME):
+OLDPATH=$PATH
 export GOPATH=$HOME/u-root
 export GOROOT=$HOME/u-root/go
 PATH=$GOPATH/bin:$GOPATH/buildbin:$GOPATH/go/bin:$PATH
 #
 (GOBIN=`pwd`/buildbin go install installcommand)
+(GOBIN=`pwd`/buildbin go install sh)
+PATH=$OLDPATH
+# well, this sucks, go is not itself static.
+# and ldd output is stupid.
+
+# 
 #
 mkdir -p bin
+mkdir -p dev etc usr/lib lib64
 sudo mount -t tmpfs none go/pkg/linux_amd64
 sudo mount -t tmpfs none bin
+sudo mount -t tmpfs none dev
+sudo mount -t tmpfs none etc
+sudo mount -t tmpfs none lib64
+sudo mount -t tmpfs none usr/lib
+# ugly test
+cp /usr/lib/libc.so.6  /usr/lib/libpthread.so.0  usr/lib
+cp /lib64/ld-linux-x86-64.so.2  lib64
+cp /etc/localtime etc
+sudo mknod dev/null c 1 3
 #
-bash
+#bash
+export GOPATH=/
+export GOROOT=/go
+PATH=$GOPATH/bin:$GOPATH/buildbin:$GOPATH/go/bin:$PATH
+sudo chroot . /buildbin/sh
 #
 #then type 
 #date
