--- a/README
+++ b/README
@@ -24,9 +24,10 @@ PATH=$OLDPATH
 # 
 #
 mkdir -p bin
-mkdir -p dev etc usr/lib lib64
+mkdir -p dev etc usr/lib lib64 tmp
 sudo mount -t tmpfs none go/pkg/linux_amd64
 sudo mount -t tmpfs none bin
+sudo mount -t tmpfs none tmp
 sudo mount -t tmpfs none dev
 sudo mount -t tmpfs none etc
 sudo mount -t tmpfs none lib64
@@ -40,6 +41,7 @@ sudo mknod dev/null c 1 3
 #bash
 export GOPATH=/
 export GOROOT=/go
+export GOBIN=/bin
 PATH=$GOPATH/bin:$GOPATH/buildbin:$GOPATH/go/bin:$PATH
 sudo chroot . /buildbin/sh
 #
