--- a/README
+++ b/README
@@ -22,14 +22,16 @@ PATH=$GOPATH/bin:$GOPATH/buildbin:$GOPATH/go/bin:$PATH
 # until we figure out the trickery to get sh to build dynamically, well ...
 (GOBIN=`pwd`/buildbin go install sh)
 PATH=$OLDPATH
-mkdir -p  bin tmp etc go/pkg/linux_amd64 tcz dev
+mkdir -p  bin tmp etc go/pkg/linux_amd64 tcz dev lib usr
 sudo mount -t tmpfs none go/pkg/linux_amd64
 sudo mount -t tmpfs none bin
 sudo mount -t tmpfs none tmp
 sudo mount -t tmpfs none etc
 sudo mount -t tmpfs none tcz
 sudo mount --bind /dev dev
-#
+set +e
+cpio -i -E tinycorebase/filelist < tinycorebase/corepure64.cpio
+set -e
 #bash
 echo nameserver 8.8.8.8 > etc/resolv.conf
 export GOPATH=/
