There are now .h files in go/pkg. Move to a cpio for the go tree.
This has the effect of moving go into ramfs for builds, which is noticeably faster.

Signed-off-by: Ronald G. Minnich <rminnich@gmail.com>

--- a/README
+++ b/README
@@ -13,21 +13,20 @@ set -e
 #built dynamically into a ramdisk-mounted /.
 #
 #Then set (assuming you are in $HOME):
+# Extract our go toolchain.
+mkdir -p go
+sudo mount -t tmpfs none go
+cpio -id < go.cpio
 OLDPATH=$PATH
 export GOPATH=$HOME/u-root
 export GOROOT=$HOME/u-root/go
 PATH=$GOPATH/bin:$GOPATH/buildbin:$GOPATH/go/bin:$PATH
 #
-echo FUCKFUCKFUCK
 (GOBIN=`pwd`/buildbin go install installcommand)
-echo FUCKFUCKFUCK
-echo FUCKFUCKFUCK
-echo FUCKFUCKFUCK
 # until we figure out the trickery to get sh to build dynamically, well ...
 (GOBIN=`pwd`/buildbin go install sh)
 PATH=$OLDPATH
 mkdir -p  bin tmp etc go/pkg/linux_amd64 tcz dev lib usr
-#sudo mount -t tmpfs none go/pkg/linux_amd64
 sudo mount -t tmpfs none bin
 #sudo mount -t tmpfs none tmp
 sudo mount -t tmpfs none etc
@@ -48,7 +47,7 @@ sudo umount tmp
 sudo umount etc
 sudo umount bin
 sudo umount tcz
-sudo umount go/pkg/linux_amd64
+sudo umount go
 sudo umount dev
 sudo umount tmp/tcloop/*
 #
