--- a/README
+++ b/README
@@ -24,7 +24,8 @@ PATH=$GOPATH/bin:$GOPATH/buildbin:$GOPATH/go/bin:$PATH
 #
 (GOBIN=`pwd`/buildbin go install installcommand)
 # until we figure out the trickery to get sh to build dynamically, well ...
-(GOBIN=`pwd`/buildbin go install sh)
+# we seem to have figure it out!
+#(GOBIN=`pwd`/buildbin go install sh)
 PATH=$OLDPATH
 mkdir -p  bin tmp etc go/pkg/linux_amd64 tcz dev lib usr
 sudo mount -t tmpfs none bin
