--- a/README
+++ b/README
@@ -22,10 +22,10 @@ export GOPATH=$HOME/u-root
 export GOROOT=$HOME/u-root/go
 PATH=$GOPATH/bin:$GOPATH/buildbin:$GOPATH/go/bin:$PATH
 #
+(bash -c 'which go')
 (GOBIN=`pwd`/buildbin go install installcommand)
 # until we figure out the trickery to get sh to build dynamically, well ...
-# we seem to have figure it out!
-#(GOBIN=`pwd`/buildbin go install sh)
+(GOBIN=`pwd`/buildbin go install sh)
 PATH=$OLDPATH
 mkdir -p  bin tmp etc go/pkg/linux_amd64 tcz dev lib usr
 sudo mount -t tmpfs none bin
@@ -43,7 +43,8 @@ echo nameserver 8.8.8.8 >> etc/resolv.conf
 export GOPATH=/
 export GOROOT=/go
 export GOBIN=/bin
-PATH=$GOPATH/bin:$GOPATH/buildbin:$GOPATH/go/bin:$PATH
+export PATH=$GOPATH/bin:$GOPATH/buildbin:$GOPATH/go/bin:$PATH
+echo $PATH
 sudo chroot . /buildbin/sh
 set +e
 sudo umount tmp
