--- a/README
+++ b/README
@@ -25,7 +25,7 @@ PATH=$GOPATH/bin:$GOPATH/buildbin:$GOPATH/go/bin:$PATH
 (bash -c 'which go')
 (GOBIN=`pwd`/buildbin go install installcommand)
 # until we figure out the trickery to get sh to build dynamically, well ...
-(GOBIN=`pwd`/buildbin go install sh)
+#(GOBIN=`pwd`/buildbin go install sh)
 PATH=$OLDPATH
 mkdir -p  bin tmp etc go/pkg/linux_amd64 tcz dev lib usr
 sudo mount -t tmpfs none bin
