--- a/README
+++ b/README
@@ -22,7 +22,6 @@ export GOPATH=$HOME/u-root
 export GOROOT=$HOME/u-root/go
 PATH=$GOPATH/bin:$GOPATH/buildbin:$GOPATH/go/bin:$PATH
 #
-(bash -c 'which go')
 (GOBIN=`pwd`/buildbin go install installcommand)
 # until we figure out the trickery to get sh to build dynamically, well ...
 #(GOBIN=`pwd`/buildbin go install sh)
@@ -40,11 +39,11 @@ set -e
 cat /etc/resolv.conf > etc/resolv.conf
 # The ultimate fallback.
 echo nameserver 8.8.8.8 >> etc/resolv.conf
-export GOPATH=/
-export GOROOT=/go
-export GOBIN=/bin
-export PATH=$GOPATH/bin:$GOPATH/buildbin:$GOPATH/go/bin:$PATH
-echo $PATH
+#export GOPATH=/
+#export GOROOT=/go
+#export GOBIN=/bin
+#export PATH=$GOPATH/bin:$GOPATH/buildbin:$GOPATH/go/bin:$PATH
+#echo $PATH
 sudo chroot . /buildbin/sh
 set +e
 sudo umount tmp
