Add BUILDCORE script and add usr/lib to mkdir commands
Signed-off-by: Ronald G. Minnich <rminnich@gmail.com>

--- a/README
+++ b/README
@@ -26,7 +26,7 @@ PATH=$GOPATH/bin:$GOPATH/buildbin:$GOPATH/go/bin:$PATH
 # until we figure out the trickery to get sh to build dynamically, well ...
 #(GOBIN=`pwd`/buildbin go install sh)
 PATH=$OLDPATH
-mkdir -p  bin tmp etc go/pkg/linux_amd64 tcz dev lib usr
+mkdir -p  bin tmp etc go/pkg/linux_amd64 tcz dev lib usr/lib
 sudo mount -t tmpfs none bin
 #sudo mount -t tmpfs none tmp
 sudo mount -t tmpfs none etc
