--- a/README
+++ b/README
@@ -23,6 +23,7 @@ export GOROOT=$HOME/u-root/go
 PATH=$GOPATH/bin:$GOPATH/buildbin:$GOPATH/go/bin:$PATH
 #
 (GOBIN=`pwd`/buildbin go install installcommand)
+(GOBIN=`pwd`/buildbin go install -x init)
 # until we figure out the trickery to get sh to build dynamically, well ...
 #(GOBIN=`pwd`/buildbin go install sh)
 PATH=$OLDPATH
@@ -44,7 +45,8 @@ echo nameserver 8.8.8.8 >> etc/resolv.conf
 #export GOBIN=/bin
 #export PATH=$GOPATH/bin:$GOPATH/buildbin:$GOPATH/go/bin:$PATH
 #echo $PATH
-sudo chroot . /buildbin/sh
+#sudo chroot . /buildbin/sh
+sudo chroot .  /buildbin/init
 set +e
 sudo umount tmp
 sudo umount etc
