Stop building installcommand.
We only need to build init now.

Signed-off-by: Ronald G. Minnich <rminnich@gmail.com>

--- a/README
+++ b/README
@@ -23,12 +23,12 @@ export GOROOT=$HOME/u-root/go
 PATH=$GOPATH/bin:$GOPATH/buildbin:$GOPATH/go/bin:$PATH
 #
 #(GOBIN=`pwd`/buildbin go install installcommand)
-(GOBIN=`pwd`/buildbin go install -x init)
+sudo mount -t tmpfs none bin
+(GOBIN=`pwd`/bin go install -x init)
 # until we figure out the trickery to get sh to build dynamically, well ...
 #(GOBIN=`pwd`/buildbin go install sh)
 PATH=$OLDPATH
 mkdir -p  bin tmp etc go/pkg/linux_amd64 tcz dev lib usr/lib
-sudo mount -t tmpfs none bin
 #sudo mount -t tmpfs none tmp
 sudo mount -t tmpfs none etc
 sudo mount -t tmpfs none tcz
@@ -46,7 +46,7 @@ echo nameserver 8.8.8.8 >> etc/resolv.conf
 #export PATH=$GOPATH/bin:$GOPATH/buildbin:$GOPATH/go/bin:$PATH
 #echo $PATH
 #sudo chroot . /buildbin/sh
-sudo chroot .  /buildbin/init
+sudo chroot .  /bin/init
 set +e
 sudo umount tmp
 sudo umount etc
