Have mount build the name space
We need to have mount init the name space, in particular,
/proc.

Signed-off-by: Ronald G. Minnich <rminnich@gmail.com>

--- a/README
+++ b/README
@@ -31,8 +31,9 @@ sudo mount -t tmpfs none bin
 sudo mount -t tmpfs none etc
 sudo mount -t tmpfs none tcz
 sudo mount --bind /dev dev
-sudo mount --bind /proc proc
 (GOBIN=`pwd`/bin go install -x init)
+# for building the initramfs
+cp bin/init .
 PATH=$OLDPATH
 set +e
 cpio -i -E tinycorebase/filelist < tinycorebase/corepure64.cpio
