--- a/README
+++ b/README
@@ -12,7 +12,6 @@ set -e
 #You can test with chroot.
 #built dynamically into a ramdisk-mounted /.
 #
-#Then set (assuming you are in $HOME):
 # Extract our go toolchain.
 mkdir -p go
 sudo mount -t tmpfs none go
@@ -21,33 +20,27 @@ OLDPATH=$PATH
 export GOPATH=`/bin/pwd`
 export GOROOT=$GOPATH/go
 PATH=$GOPATH/bin:$GOPATH/buildbin:$GOPATH/go/bin:$PATH
-#
-#(GOBIN=`pwd`/buildbin go install installcommand)
-# until we figure out the trickery to get sh to build dynamically, well ...
-#(GOBIN=`pwd`/buildbin go install sh)
+
 mkdir -p  bin tmp etc go/pkg/linux_amd64 tcz dev lib usr/lib proc
 sudo mount -t tmpfs none bin
+# don't mount tmp, it's useful for people to see what it looks like after.
 #sudo mount -t tmpfs none tmp
 # Don't bother mounting, we need the files later for the initramfs
 #sudo mount -t tmpfs none etc
 sudo mount -t tmpfs none tcz
 sudo mount --bind /dev dev
 (GOBIN=`pwd` go install -x init)
-# for building the initramfs
+# In case people want tinycore packages, get the .so's for tinycore
 PATH=$OLDPATH
 set +e
 cpio -id -E tinycorebase/filelist < tinycorebase/corepure64.cpio
 set -e
+# Uncomment this if you want to stop here and look around
 #bash
 cat /etc/resolv.conf > etc/resolv.conf
 # The ultimate fallback.
 echo nameserver 8.8.8.8 >> etc/resolv.conf
-#export GOPATH=/
-#export GOROOT=/go
-#export GOBIN=/bin
-#export PATH=$GOPATH/bin:$GOPATH/buildbin:$GOPATH/go/bin:$PATH
-#echo $PATH
-#sudo chroot . /buildbin/sh
+#
 sudo chroot .  /init
 set +e
 sudo umount tmp
@@ -58,8 +51,8 @@ sudo umount go
 sudo umount dev
 sudo umount proc
 sudo umount tmp/tcloop/*
-#
-#then type 
+
+# Simple test once the primitive sh starts:
 #date
 #and watch how it goes.
 #
