Update and fix the startup instructions.
Signed-off-by: Ronald G. Minnich <rminnich@google.com>

--- a/README
+++ b/README
@@ -2,11 +2,18 @@
 set -e
 # This README is also a script you can run to test this idea out.
 # This is a root file system all based on Go. 
-#
-#The only binary is the builder, and 6?. The rest gets
-#built dynamically into a ramdisk-mounted /.
-#Some tools won't build if you build with CGO_ENABLED=0
-#But we don't want to carry along a gcc dependency along with
-#everything else.
 
+if [ -z $GOPATH ]
+then
+	echo "Please set GOPATH and run this command again."
+	exit 1
+fi
+
+if [ -z $GOROOT ]
+then
+	echo "You have not set GOROOT. This can work but if not, please"
+	echo "set GOROOT to point to a Go tree with version >= 1.6"
+fi
+
+go run scripts/getimports.go
 go run scripts/ramfs.go -test
